Search User by email or phone and search event by name
